--- a/packages/components/src/globals/scss/_theme-tokens.scss
+++ b/packages/components/src/globals/scss/_theme-tokens.scss
@@ -35,6 +35,7 @@ $disabled: $disabled-02 !default;
 /// @type Color
 /// @access public
 /// @group global-themes
+/// @deprecated
 $disabled-background-color: $disabled-01 !default;
 
 /// @type Color
