fix(dropdown): state disabled background color (#7461)

--- a/packages/components/src/components/dropdown/_dropdown.scss
+++ b/packages/components/src/components/dropdown/_dropdown.scss
@@ -348,6 +348,7 @@
   }
 
   .#{$prefix}--dropdown--disabled {
+    background-color: $disabled-01;
     border-bottom-color: transparent;
 
     &:hover {
