refactor(select): remove unused disabled option styles (#7477)
* refactor(select): remove unused disabled option styles

* fix(Select): reset disabled select opacity

Co-authored-by: Alessandra Davila <aledavila@ibm.com>
Co-authored-by: Andrea N. Cardona <andreancardona@gmail.com>

--- a/packages/components/src/components/select/_select.scss
+++ b/packages/components/src/components/select/_select.scss
@@ -51,6 +51,8 @@
     border-bottom: 1px solid $ui-04;
     border-radius: 0;
     cursor: pointer;
+    // reset disabled <select> opacity
+    opacity: 1;
 
     // Do not transition on background-color (see: https://github.com/carbon-design-system/carbon/issues/4464)
     transition: outline $duration--fast-01 motion(standard, productive);
@@ -159,11 +161,6 @@
   .#{$prefix}--select-option {
     // For the options to show in IE11
     color: $text-01;
-  }
-
-  .#{$prefix}--select-option[disabled] {
-    cursor: not-allowed;
-    opacity: 0.5;
   }
 
   // Override some Firefox user-agent styles
