feat(tag): introducing custom icon (#7262)
* feat(tag): introducing custom icon

* feat(tag): add test

* feat(tag): fixed variable name

* feat(tag): improving design based on feedback

* feat(tag): removed unecessary icon import

* feat(tag): added custom icon knob to story

* feat(tag): fixed spacing on imports

* feat(tag): removed redundant boolean

* Update packages/react/src/components/Tag/Tag-test.js

Co-authored-by: TJ Egan <tw15egan@gmail.com>

* Update packages/react/src/components/Tag/Tag.js

Co-authored-by: TJ Egan <tw15egan@gmail.com>

* chore(snapshot): update snapshots, run prettier

* feat(tag): refactored nested ternary

* feat(tag): reformatted conditionals

* feat(tag): refactored icon rendering code

* feat(tag): ran formatter

* feat(tag): removed inner span's ...other options

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/components/src/components/tag/_tag.scss
+++ b/packages/components/src/components/tag/_tag.scss
@@ -172,6 +172,22 @@
     }
   }
 
+  .#{$prefix}--tag__custom-icon {
+    flex-shrink: 0;
+    width: rem(16px);
+    height: rem(16px);
+    margin-right: $spacing-02;
+    padding: 0;
+    color: currentColor;
+    background-color: transparent;
+    border: 0;
+    outline: none;
+
+    svg {
+      fill: currentColor;
+    }
+  }
+
   .#{$prefix}--tag--disabled .#{$prefix}--tag__close-icon {
     cursor: not-allowed;
   }
