fix(CodeSnippet): use -01 instead of internal variable (#7621)

--- a/packages/components/src/globals/scss/_theme-tokens.scss
+++ b/packages/components/src/globals/scss/_theme-tokens.scss
@@ -190,6 +190,7 @@ $checkbox-border-width: 2px !default;
 /// @type Color
 /// @access public
 /// @group code-snippet
+/// @deprecated
 $snippet-background-color: $field-01 !default;
 
 /// @type Color
