--- a/packages/colors/examples/sass-modules/src/styles.scss
+++ b/packages/colors/examples/sass-modules/src/styles.scss
@@ -5,7 +5,7 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-@use '@carbon/colors/scss/module' as *;
+@use '@carbon/colors' as *;
 
 body {
   background: $gray-20;
