fix(ListBox): update listbox components to match spec (#7518)
* fix(dropdown): use light hover background token

* docs(Dropdown): add type knob

* fix(list-box): add light hover color for menu options

* fix(combo-box): remove hover background on input

* fix(MultiSelect): reduce clickable area for filter tag

* fix(ListBoxSelection): pass translations through

* test(MultiSelect): update label assertions

* chore: update snapshots

* fix(MultiSelect): adjust padding for filterable component

* fix(multi-select): remove hover color on combobox

* fix(multi-select): fix filterable tag spacing

* fix(dropdown): increase inline dropdown grid gap

* fix(combo-box): remove light variant hover background change

* fix(list-box): update close icon fill

Co-authored-by: Andrea N. Cardona <andreancardona@gmail.com>

--- a/packages/components/src/components/list-box/_list-box.scss
+++ b/packages/components/src/components/list-box/_list-box.scss
@@ -147,6 +147,10 @@ $list-box-menu-width: rem(300px);
   // Light variation for 'list-box'
   .#{$prefix}--list-box--light {
     background-color: $field-02;
+
+    &:hover {
+      background-color: $hover-light-ui;
+    }
   }
 
   .#{$prefix}--list-box--light .#{$prefix}--list-box__menu {
@@ -440,7 +444,7 @@ $list-box-menu-width: rem(300px);
   }
 
   .#{$prefix}--list-box__selection > svg {
-    fill: $icon-02;
+    fill: $icon-01;
 
     // Windows, Firefox HCM Fix
     @media screen and (-ms-high-contrast: active),
@@ -585,6 +589,10 @@ $list-box-menu-width: rem(300px);
     &:active {
       background-color: $selected-ui;
     }
+  }
+
+  .#{$prefix}--list-box--light .#{$prefix}--list-box__menu-item:hover {
+    background-color: $hover-light-ui;
   }
 
   .#{$prefix}--list-box--sm .#{$prefix}--list-box__menu-item {
