fix(modal): set modal content position rule (#7698)
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/modal/_modal.scss
+++ b/packages/components/src/components/modal/_modal.scss
@@ -248,6 +248,7 @@
   .#{$prefix}--modal-content {
     @include type-style('body-long-01');
 
+    position: relative;
     grid-row: 2/-2;
     grid-column: 1/-1;
     margin-bottom: $spacing-09;
