--- a/packages/components/src/components/list-box/_list-box.scss
+++ b/packages/components/src/components/list-box/_list-box.scss
@@ -110,6 +110,7 @@ $list-box-menu-width: rem(300px);
   }
 
   .#{$prefix}--list-box .#{$prefix}--text-input {
+    min-width: 0;
     height: 100%;
   }
 
