--- a/packages/components/src/components/data-table/_data-table-core.scss
+++ b/packages/components/src/components/data-table/_data-table-core.scss
@@ -92,6 +92,11 @@
     border-bottom: 1px solid $hover-ui;
   }
 
+  .#{$prefix}--data-table tbody tr:hover td .#{$prefix}--link,
+  .#{$prefix}--data-table tbody tr:hover th .#{$prefix}--link {
+    color: $link-02;
+  }
+
   .#{$prefix}--data-table th,
   .#{$prefix}--data-table td {
     text-align: left;
@@ -217,6 +222,10 @@
     &:hover {
       background-color: $hover-ui;
     }
+  }
+
+  .#{$prefix}--data-table--selected .#{$prefix}--link {
+    color: $link-02;
   }
 
   .#{$prefix}--data-table--compact td.#{$prefix}--table-column-menu,
