fix(list-box): update hover active item background color (#7832)
* fix(list-box): update hover active item background color

* fix(list-box): update active highlighted styles for keyboard controls

Co-authored-by: Taylor Jones <tay1orjones@users.noreply.github.com>

--- a/packages/components/src/components/list-box/_list-box.scss
+++ b/packages/components/src/components/list-box/_list-box.scss
@@ -749,9 +749,10 @@ $list-box-menu-width: rem(300px);
     border-bottom-color: $selected-light-ui;
   }
 
-  .#{$prefix}--list-box__menu-item--active:hover {
-    background-color: $hover-ui;
-    border-bottom-color: $hover-ui;
+  .#{$prefix}--list-box__menu-item--active:hover,
+  .#{$prefix}--list-box__menu-item--active.#{$prefix}--list-box__menu-item--highlighted {
+    background-color: $hover-selected-ui;
+    border-bottom-color: $hover-selected-ui;
   }
 
   .#{$prefix}--list-box__menu-item--active
