fix(radio-button): avoid outline cutoff in hidden overflow containers (#7886)
* Revert "fix(radio-button): margin bug fix (#7133)"

This reverts commit 0e634c883b873a72b7fb7577b6ac2f5eca5265e0.

* fix(radio-button): avoid outline cutoff in hidden overflow containers

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/radio-button/_radio-button.scss
+++ b/packages/components/src/components/radio-button/_radio-button.scss
@@ -71,7 +71,7 @@
     flex-shrink: 0;
     width: rem(18px);
     height: rem(18px);
-    margin: 2px $carbon--spacing-03 2px $carbon--spacing-03;
+    margin: rem(2px) $carbon--spacing-03 rem(2px) rem(2px);
     background-color: transparent;
     border: $radio-border-width solid $icon-01;
     border-radius: 50%;
