--- a/packages/components/src/components/checkbox/_checkbox.scss
+++ b/packages/components/src/components/checkbox/_checkbox.scss
@@ -85,7 +85,8 @@
     // different checkbox states.
     width: rem(16px);
     height: rem(16px);
-    margin: rem(2px);
+    // increase left margin for #6480
+    margin: rem(2px) rem(2px) rem(2px) rem(3px);
 
     // Checkboxes with a background color look visually off against a parent container.
     background-color: transparent;
