fix(Tabs): prevent tablist role from stealing focus (#7905)
* fix(tabs): remove default tablist outlines

* fix(Tabs): prevent tablist role from stealing focus

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/tabs/_tabs.scss
+++ b/packages/components/src/components/tabs/_tabs.scss
@@ -453,6 +453,7 @@
       padding: 0;
       overflow: auto hidden;
       list-style: none;
+      outline: 0;
       transition: max-height $duration--fast-01 motion(standard, productive);
 
       // hide scrollbars
