fix(skeleton): update skeleton styles on Checkbox, CodeSnippet, ProgressIndicator, and TextArea (#7973)
* fix(skeleton): updates skeleton state performance

* chore(tests): update snapshots

* fix(Skeleton): fix skeleton layout issues

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/checkbox/_checkbox.scss
+++ b/packages/components/src/components/checkbox/_checkbox.scss
@@ -192,7 +192,7 @@
     height: $spacing-05;
 
     // Add extra spacing when label is present
-    margin: auto 0 auto rem(6px);
+    margin: rem(1px) 0 0 rem(6px);
   }
 }
 
