--- a/packages/components/src/components/list-box/_list-box.scss
+++ b/packages/components/src/components/list-box/_list-box.scss
@@ -396,6 +396,7 @@ $list-box-menu-width: rem(300px);
     @include button-reset($width: false);
 
     position: absolute;
+    top: $carbon--spacing-03;
     right: $carbon--spacing-05;
     display: flex;
     align-items: center;
