--- a/packages/components/src/components/data-table/_data-table-expandable.scss
+++ b/packages/components/src/components/data-table/_data-table-expandable.scss
@@ -63,7 +63,7 @@
   }
 
   tr.#{$prefix}--parent-row.#{$prefix}--expandable-row + tr[data-child-row] td {
-    padding-left: $carbon--spacing-09;
+    padding-left: 4rem;
     border-bottom: 1px solid $ui-03;
     transition: padding-bottom $duration--fast-02 motion(standard, productive),
       transform $duration--fast-02 motion(standard, productive),
@@ -162,11 +162,6 @@
   //----------------------------------------------------------------------------
   .#{$prefix}--data-table td.#{$prefix}--table-expand {
     border-bottom: 1px solid $ui-03;
-  }
-
-  .#{$prefix}--data-table th.#{$prefix}--table-expand + th,
-  .#{$prefix}--data-table td.#{$prefix}--table-expand + td {
-    padding-left: 0;
   }
 
   .#{$prefix}--data-table
