--- a/packages/components/src/components/modal/_modal.scss
+++ b/packages/components/src/components/modal/_modal.scss
@@ -265,6 +265,10 @@
     }
   }
 
+  .#{$prefix}--modal-content > p {
+    @include type-style('body-long-01');
+  }
+
   // Required so overflow-indicator disappears at end of content
   .#{$prefix}--modal-scroll-content > *:last-child {
     padding-bottom: $spacing-07;
