feat: add context-menu (#7350)
* chore(ContextMenu): scaffold new component

* feat(context-menu): build basic structure and styling

* feat(context-menu): build basic nesting support

* feat(context-menu): use button markup

* feat(context-menu): add support for disabled options

* feat(context-menu): add support fort shortcuts

* feat(context-menu): add support for icons

* feat(context-menu): add divider component

* feat(context-menu): add support for selectable option

* fix(context-menu): also indent options when sibling is selectable

* feat(context-menu): add support for radio groups

* fix(context-menu): add support for initialSelectedItem in radio groups

* fix(context-menu): also indent options when sibling is radio

* feat(context-menu): add support for keyboard navigation

* feat(context-menu): dynamically reverse menu direction

* feat(context-menu): add props.onClose

* chore(context-menu): add inline notification to story

* fix(context-menu): fix styling issues

* refactor(context-menu): rename SelectableContextMenuOption to ContextMenuSelectableOption

* fix(context-menu): don't overwrite checkbox or radio role

* fix(context-menu): automatically close menu after item was clicked

* fix(context-menu): improve behaviour with screenreaders

* fix(context-menu): add onChange to radio group and checkbox

* test(context-menu): update public-api and index snapshots

* chore(context-menu): correct formatting

* test(context-menu): add render tests

* chore: run prettier

* fix(context-menu): focus entire menu on open

* fix(context-menu): only open submenu on long hover or right arrow

* feat(context-menu): always keep menu within body boundaries

* fix(context-menu): implement review feedback

* fix(context-menu): don't close when disabled or divider was clicked

* fix(context-menu): prevent menu from closing immediately in Safari

* refactor(context-menu): separate between external and internal component

* refactor(context-menu): mark as unstable

* fe

--- a/packages/components/src/globals/scss/styles.scss
+++ b/packages/components/src/globals/scss/styles.scss
@@ -130,6 +130,7 @@ $deprecations--message: 'Deprecated code was found, this code will be removed be
 @import '../../components/code-snippet/code-snippet';
 @import '../../components/overflow-menu/overflow-menu';
 @import '../../components/content-switcher/content-switcher';
+@import '../../components/context-menu/context-menu';
 @import '../../components/date-picker/date-picker';
 @import '../../components/dropdown/dropdown';
 @import '../../components/loading/loading';
