--- a/packages/react/.storybook/styles.scss
+++ b/packages/react/.storybook/styles.scss
@@ -51,6 +51,7 @@ $prefix: 'bx';
 @import '~carbon-components/src/components/code-snippet/code-snippet';
 @import '~carbon-components/src/components/overflow-menu/overflow-menu';
 @import '~carbon-components/src/components/content-switcher/content-switcher';
+@import '~carbon-components/src/components/context-menu/context-menu';
 @import '~carbon-components/src/components/date-picker/date-picker';
 @import '~carbon-components/src/components/dropdown/dropdown';
 @import '~carbon-components/src/components/loading/loading';
