fix: update vanilla loading spinner markup and replace expanded containers with margin (#7968)
* chore: format

* fix(loading): match markup with React implementation

* fix(inline-loading): match markup with React implementation

* fix(inline-loading): replace expanded container with margin

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/inline-loading/_inline-loading.scss
+++ b/packages/components/src/components/inline-loading/_inline-loading.scss
@@ -42,8 +42,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 2rem;
-    height: 2rem;
+    margin-right: $carbon--spacing-03;
   }
 
   .#{$prefix}--inline-loading__checkmark-container {
