feat(tile): add support for disabled state for radio and selectable tiles (#8058)
* feat(selectable-tile): add support for disabled state

* feat(radio-tile): add support for disabled state

* fix(tile): use disabled-02 for disabled outline and checkmark

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/tile/_tile.scss
+++ b/packages/components/src/components/tile/_tile.scss
@@ -187,10 +187,7 @@
     opacity: 1;
   }
 
-  .#{$prefix}--tile-input:checked
-    + .#{$prefix}--tile
-    > .#{$prefix}--tile__checkmark
-    svg {
+  .#{$prefix}--tile--is-selected .#{$prefix}--tile__checkmark svg {
     fill: $ui-05;
 
     // Windows, Firefox HCM Fix
@@ -212,6 +209,26 @@
 
   .#{$prefix}--tile-input:focus + .#{$prefix}--tile {
     @include focus-outline('outline');
+  }
+
+  .#{$prefix}--tile--disabled.#{$prefix}--tile--selectable {
+    color: $disabled-02;
+    background-color: $ui-01;
+    cursor: not-allowed;
+  }
+
+  .#{$prefix}--tile--disabled.#{$prefix}--tile--selectable.#{$prefix}--tile--light {
+    background-color: $ui-02;
+  }
+
+  .#{$prefix}--tile--disabled.#{$prefix}--tile--is-selected {
+    outline-color: $disabled-02;
+  }
+
+  .#{$prefix}--tile--disabled.#{$prefix}--tile--is-selected
+    .#{$prefix}--tile__checkmark
+    svg {
+    fill: $disabled-02;
   }
 }
 
