--- a/packages/components/src/globals/scss/_layout.scss
+++ b/packages/components/src/globals/scss/_layout.scss
@@ -12,14 +12,17 @@
 /// @type Map
 /// @group global-layout
 $z-indexes: (
+  // Dropdowns that render outside of a Modal should render above a Modal.
+  // Dropdowns below the modal will close when the Modal is opened, so
+  // having a higher z-index *should* not cause issues.
+  dropdown: 9100,
   modal: 9000,
-  overlay: 6000,
-  dropdown: 6000,
   header: 8000,
+  overlay: 6000,
+  floating: 6000,
   footer: 5000,
   hidden: - 1,
-  overflowHidden: - 1,
-  floating: 6000,
+  overflowHidden: - 1
 );
 
 /// @access public
