fix(DataTable): expandable table size variations alignment issues (#8080)
* feat: add size variation expandable tables

* fix: small persistent search width

* fix: size variation expandable content padding

* fix: remove commented code

* fix: add 16px padding expand btn

* fix: tall expand btn width

--- a/packages/components/src/components/data-table/_data-table-action.scss
+++ b/packages/components/src/components/data-table/_data-table-action.scss
@@ -544,6 +544,10 @@
       padding: $spacing-03;
     }
 
+    .#{$prefix}--toolbar-action.#{$prefix}--toolbar-search-container-persistent {
+      width: 100%;
+    }
+
     //hidden
     .#{$prefix}--toolbar-search-container-expandable {
       width: rem(32px);
