feat(spacing): change layout variables to spacing (#8063)
* feat(spacing): combine layout with spacing variables

* test(snapshot): update snapshot tests

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/button/_mixins.scss
+++ b/packages/components/src/components/button/_mixins.scss
@@ -104,6 +104,6 @@
 @mixin button-padding-large {
   align-items: baseline;
   padding-top: $spacing-05;
-  padding-right: $layout-05;
+  padding-right: $spacing-10;
   padding-left: $spacing-05;
 }
