--- a/packages/components/src/components/notification/_toast-notification.scss
+++ b/packages/components/src/components/notification/_toast-notification.scss
@@ -31,7 +31,7 @@
     margin-top: $carbon--spacing-03;
     margin-right: $carbon--spacing-05;
     margin-bottom: $carbon--spacing-03;
-    padding-left: rem(14px);
+    padding-left: $carbon--spacing-05;
     color: $inverse-01;
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
 
@@ -133,8 +133,8 @@
 
   .#{$prefix}--toast-notification__icon {
     flex-shrink: 0;
-    margin-top: rem(14px);
-    margin-right: rem(14px);
+    margin-top: $carbon--spacing-05;
+    margin-right: $carbon--spacing-05;
   }
 
   .#{$prefix}--toast-notification__details {
