fix(structured-list): top align header text (#8166)
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/structured-list/_structured-list.scss
+++ b/packages/components/src/components/structured-list/_structured-list.scss
@@ -96,7 +96,7 @@
     font-weight: 600;
     text-align: left;
     text-transform: $structured-list-text-transform;
-    vertical-align: bottom;
+    vertical-align: top;
   }
 
   .#{$prefix}--structured-list-tbody {
