fix(datepicker): fixed the datepicker component bidi layout issue. (#8161) (#8162)
* fix(datepicker): fixed the datepicker bidi layout issue. (#8161)

Fixed the next & previous month arrow orientation for datepicker component in bidi(RTL) layout by adding the RTLCSS value directives. (#8161)

* fix(datepicker): fixed the datepicker bidi layout issue. (#8161)

Wrapped the RTL directive with  #{}, so sass could correctly interpolates the comment as a directive (#8161)

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/date-picker/_flatpickr.scss
+++ b/packages/components/src/components/date-picker/_flatpickr.scss
@@ -142,6 +142,7 @@
   width: rem(40px);
   padding: 0;
   fill: $icon-01;
+  transform: scale(1, 1) #{'/*rtl: scale(-1,1)*/'};
   transition: background-color $duration--fast-01 motion(standard, productive);
 
   &:hover {
