--- a/packages/components/src/components/number-input/_number-input.scss
+++ b/packages/components/src/components/number-input/_number-input.scss
@@ -22,6 +22,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    width: 100%;
   }
 
   .#{$prefix}--number input[type='number'] {
